# ThunderForgeVTT

./: .gitignore  .swcrc  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  SECURITY.md  clippy.toml  package.json  tailwind.config.js  tailwindcss.config.js  tsconfig.json  webpack.config.js
.github/: FUNDING.yml
assets/: favicon.png~
docs/: README.md  ThunderForge High-Level Architecture
src/: loader.js
src/client/: Cargo.toml  Makefile.toml  package.json
src/client/src/: counter.rs  lib.rs  loader.js
src/client/src/engine/: index.ts
src/client/src/engine/canvas/: canvas.ts
src/client/src/engine/token/: token.ts
src/client/src/engine/utils/: logger.ts
src/client/src/styles/: components.scss  main.sass  main.scss  main.scss.d.ts
src/client/src/styles/components/: card.scss
src/client/src/utils/: logger.rs
src/client/src/views/: login.rs  mod.rs
src/client/src/views/auth/: login.rs  signup.rs
src/client/src/views/world/: mod.rs
src/core/: Cargo.toml  README.md
src/core/docs/: events.md
src/core/src/: lib.rs
src/core/src/auth/: mod.rs
src/core/src/events/: mod.rs
src/core/src/policies/: mod.rs
src/core/src/utils/: mod.rs
src/data/client/: index.html
src/data/client/static/js/: main.js  pkg_index_js.chunk.js  src_styles_main_sass.chunk.js
src/engine/: Cargo.toml  README.md
src/engine/src/: lib.rs
src/engine/src/token/: mod.rs
src/public/: index.html
src/server/: Cargo.toml  LICENSE
src/server/src/: main.rs
src/server/src/auth/: mod.rs
src/server/src/config/: mod.rs
src/server/src/errors/: mod.rs
src/server/src/serve/: mod.rs
src/server/src/users/: mod.rs
src/server/src/utils/: mod.rs
src/server/src/world/: mod.rs
