[package]
name = "thunderforge_core"
version = "0.1.0"
edition = "2018"
repository = "git@github.com:ThunderForgeVTT/ThunderForgeVTT.git"
license = "BSD 3-Clause License"

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
base64 = "0.13"
reqwest-wasm = { version = "*", features = ["json"] }
rocket = { version = "0.5.0-rc.1", optional = true,  default-features = false,  features = ["json", "uuid"] }
yew = {version = "0.18", default-features = false, optional = true}
wasm-bindgen-futures =  { version = "0.4.24", optional = true }
regex = "1.5.4"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[features]
client = ["yew", "wasm-bindgen-futures"]
server = ["rocket"]
