[package]
name = "thunderforge_engine"
version = "0.1.0"
edition = "2018"
repository = "git@github.com:ThunderForgeVTT/ThunderForgeVTT.git"
license = "BSD 3-Clause License"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
wasm-bindgen = "*"
reqwest-wasm = { version = "0.11", features = ["json"] }
uuid = { version = "0.4", features = ["serde", "v5"] }
web-sys = "*"
yew = {version = "0.18", default-features = false, features = ["web_sys", "services"]}


