[package]
name = "thunderforge"
version = "0.1.0"
authors = ["mbround18 <12646562+mbround18@users.noreply.github.com>"]
edition = "2018"
repository = "git@github.com:ThunderForgeVTT/ThunderForgeVTT.git"
license = "BSD 3-Clause License"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "thunderforge"

[dependencies]
tokio = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
clap = "2"
serde_derive = "1"
websocket = "0.24"
base64 = "0.13"
include_dir = "0.6"
dotenv = "0.15"
rust-argon2 = "0.8"
unqlite = "1.5"

[dependencies.thunderforge_core]
path = "../core"
features = ["server"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "default", "secrets"]

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["serve"]
